--- a/build.gradle
+++ b/build.gradle
@@ -22,7 +22,7 @@ dependencies {
 
 
     // при реализации проекте с использованием Selenium вместо библиотеки com.codeborne:selenide подключаются
-    // org.seleniumhq.selenium:selenium-java и io.github.bonigarcia:webdrivermanager
+    //org.seleniumhq.selenium : selenium - java и io . github.bonigarcia : webdrivermanager
     testImplementation 'org.seleniumhq.selenium:selenium-java:4.11.0'
     testImplementation 'io.github.bonigarcia:webdrivermanager:5.4.1'
 }
@@ -31,5 +31,5 @@ test {
     useJUnitPlatform()
     // в тестах, вызывая `gradlew test -Dselenide.headless=true` будем передавать этот параметр в JVM (где его подтянет Selenide)
     // свойство selenide.headless используется в проектах на основе Selenide
-    systemProperty 'selenide.headless', System.getProperty('selenide.headless')
+    //systemProperty 'selenide.headless', System.getProperty('selenide.headless')
 }
